--- a/Inicio/index.html
+++ b/Inicio/index.html
@@ -17,15 +17,14 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
+  <link rel="shortcut icon" href="../imagenes/logo.png">
 </head>
 <body>
    
   <header class="head1">
     <div class="container-fluid">
       <div class="row">
-        
         <div class="col-12 col-sm-12 col-md-12 col-lg-5">
-          
     <nav class="navbar navbar-expand-lg navbar-light">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -33,19 +32,19 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item hvr-overline-from-left ">
-              <a class="nav-link" style="color: white;" href="#">Inicio</a>
+              <a class="nav-link" style="color: white;" href="../Inicio/index.html"  align="center">Inicio</a>
             </li>
             <li class="nav-item hvr-overline-from-left ">
-              <a class="nav-link" style="color: white;" href="#">Menu</a>
+              <a class="nav-link" style="color: white;" href="/Menu/index.html"  align="center">Menú</a>
             </li>
             <li class="nav-item hvr-overline-from-left ">
-              <a class="nav-link"  style="color: white;" href="#">Nosotros</a>
+              <a class="nav-link"  style="color: white;" href="../Nosotros/nosotros.html" align="center">  Nosotros </a>
             </li>
             <li class="nav-item hvr-overline-from-left ">
-              <a class="nav-link " style="color: white;"  href="#">Testimonios</a>
+              <a class="nav-link " style="color: white;"  href="#"  align="center">Testimonios</a>
             </li>
             <li class="nav-item hvr-overline-from-left ">
-              <a class="nav-link "  style="color: white;" href="#">Contactenos</a>
+              <a class="nav-link "  style="color: white;" href="../Contactenos/index.html" align="center">Contáctenos</a>
             </li>
           </ul>
         </div>
@@ -53,7 +52,7 @@
     </div>
       <div class="col-12 col-sm-12 col-md-12 col-lg-7">
                 <div class="contenedor_logo" align="center">
-                    <img src="../imagenes/boton.jpg" alt="" class="logo">
+                    <img src="../imagenes/logo.png" alt="" class="logo">
                 </div> 
 
                 <div class="contenedor_titulo" align="center">
@@ -70,7 +69,7 @@
                     </p>
                   </div> <br>
                     <div align="center" class="contenedor_boton">
-                        <a href="" class="boton hvr-sweep-to-right hvr-grow " align="center">Conoce más</a>
+                        <a href="../Nosotros/nosotros.html" class="boton hvr-sweep-to-right hvr-grow" align="center">Conoce más</a>
                     </div>
             </div>  
         </div>
