--- a/Nosotros/nosotros.html
+++ b/Nosotros/nosotros.html
@@ -11,41 +11,121 @@
     <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <!-- animaciones -->
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+  <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+/>
+<!-- Fontawesome -->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css">
 
     <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" href="../imagenes/logito.png">
 </head>
 <body>
-  <header class="head0">
-    <ul class="nav">
-        <li class="nav-item">
-          <a class="nav-link hvr-overline-from-left" href="#" style="color: black;">Inicio</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link hvr-overline-from-left" href="#" style="color: black;">Menu</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link hvr-overline-from-left" href="#" style="color: black;">Nosotros</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link  hvr-overline-from-left" href="#" style="color: black;">Testimonios</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link hvr-overline-from-left" href="#" style="color: black;" >Contactenos</a>
-        </li>
-      </ul>
-    </header>
-<br>
-<header class="head1">
-<div class="container-fluid">
-<div class="row">
-    
-</div>
-</div>
+<header class="head0">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+        <nav class="navbar navbar-expand-lg navbar-light">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item hvr-overline-from-left ">
+                <a class="nav-link" style="color: white;" href="../Inicio/index.html"  align="center">Inicio</a>
+              </li>
+              <li class="nav-item hvr-overline-from-left ">
+                <a class="nav-link" style="color: white;" href="../Menu/index.html"  align="center">Menú</a>
+              </li>
+              <li class="nav-item hvr-overline-from-left ">
+                <a class="nav-link"  style="color: white;" href="../Nosotros/nosotros.html" align="center">  Nosotros </a>
+              </li>
+              <li class="nav-item hvr-overline-from-left ">
+                <a class="nav-link " style="color: white;"  href="#"  align="center">Testimonios</a>
+              </li>
+              <li class="nav-item hvr-overline-from-left ">
+                <a class="nav-link "  style="color: white;" href="../Contactenos/index.html" align="center">Contáctenos</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+        <div class="caja_logo">
+          <img src="../imagenes/logo.png" alt="" class="logo">
+        </div>
+        
+      </div>
+    </div>
+  </div>
+</header>
+
+<header class="head1"> <br>
+  <div class="container">
+    <div class="row"> 
+      <div class="col-12 col-sm-12 col-md-12 col-lg-6 caja"> 
+        <img src="../imagenes/team.svg" alt="" class="svg">
+      </div>  
+      <div class="col-12 col-sm-12 col-md-12 col-lg-6 caja"  align="justify"> <br>
+       <h1 class="titulo"> ¿Quienes somos?</h1>
+       <font class="contenido">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime ullam suscipit voluptatem, mollitia nobis non eius rem, corrupti minus cupiditate libero soluta magnam, sunt iste temporibus. Illum omnis provident adipisci.Nostrum ratione laboriosam delectus, quam nesciunt quisquam possimus, totam placeat cupiditate unde ducimus sed! Provident libero architecto corporis voluptatibus eos maiores a numquam rerum voluptatum voluptatem harum, esse, minus rem.</font>
+      </div>
+    </div> <hr>
+    <div class="row">
+      <div class="col-12 col-sm-12 col-md-12 col-lg-6 caja" align="justify"> <br>
+        <h1 class="titulo">Misión</h1>
+        <font class="contenido">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam vel explicabo corrupti praesentium totam earum recusandae consectetur illum at quis, ut rerum harum delectus rem saepe est. Possimus, quisquam natus.Officia blanditiis quis consequuntur. Inventore numquam consequuntur molestiae omnis vitae vero illo quae odit aliquid? Impedit porro eius eveniet ducimus doloribus vel facere qui, quas enim vero voluptatem fugit deserunt.</font> <br> <br>
+        <h1 class="titulo">Visión</h1>
+        <font class="contenido" >Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae mollitia sunt ratione? Illo, obcaecati inventore. Id itaque officiis doloremque est voluptates, maxime provident ducimus optio eaque adipisci quasi labore! Reiciendis?Mollitia incidunt laboriosam quidem earum temporibus dicta numquam nulla neque quia veniam dolore enim, molestias sit cupiditate, repellat quisquam! Culpa sequi atque quisquam earum eius beatae nemo corporis, nostrum quidem?</font> <br><br>
+      </div> 
+      <div class="col-12 col-sm-12 col-md-12 col-lg-6 caja"> <br> <br>
+        <img src="../imagenes/progreso.svg" alt="" class="svg">
+      </div> 
+    </div> 
+  </div>
+</header>
+
+<header class="head2"> 
+  <div class="container"> 
+    <div class="row"> 
+      <div class="col-12 col-sm-12 col-md-12 col-lg-12  caja2" align="center"> <br> <br>
+        <h1 class="titulo">Conoce más</h1> <br>
+        <a href="../Contactenos/index.html" class="boton hvr-grow hvr-sweep-to-top">Contactanos.</a> <br> <br> <br>
+      </div> 
+    </div> 
+  </div> 
 </header>
 
 
+<footer class="footer"> <br>
+<div class="container">
+  <div class="row">
+    <div class="col-12 col-sm-12 col-md-12 col-lg-3">
+      <h2 class="titulo_footer">Dirección</h2>
+      <font color="gray">Carrea 45 a ,# 9-25, local 101, multifamilaires la esperanza, IV etapa</font>
+    </div> <br>
+    <div class="col-12 col-sm-12 col-md-12 col-lg-3">
+      <h2 class="titulo_footer">Telefono</h2>
+      <font color="gray">350704717</font>
+    </div>
+    <div class="col-12 col-sm-12 col-md-12 col-lg-6">
+      <ul>
+        <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
+      </ul>
+    </div>
+  </div>
+</div> <br>
+</footer>
+
+
+
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script> src="js/bootstrap.min" </script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </body>
 </html>
