--- a/Nosotros/nosotros.html
+++ b/Nosotros/nosotros.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nosotros</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet"  href="style.css" >
+  <title>Nosotros</title>
+  <!-- <link rel="shortcut icon" href="imagenes/logo solo.png" /> -->
+  <!-- Required meta tags -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600&display=swap" rel="stylesheet">
-    <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-  <!-- animaciones -->
-  <link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-/>
-<!-- Fontawesome -->
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css">
+  <!-- Fontawesome-->
+  <link rel="stylesheet" href="/bootstrap/all.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css">
 
-    <link rel="stylesheet" href="style.css">
+  <!-- Script-->
+   
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
+  <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">-->
+
+  <link href="style.css" rel="stylesheet">
+  <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+   <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600&display=swap" rel="stylesheet">
+  <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>-->
+
   <link rel="shortcut icon" href="../imagenes/logito.png">
 </head>
 <body>
@@ -106,15 +111,10 @@
     <div class="col-12 col-sm-12 col-md-12 col-lg-3">
       <h2 class="titulo_footer">Dirección</h2>
       <font color="gray">Carrea 45 a ,# 9-25, local 101, multifamilaires la esperanza, IV etapa</font>
-    </div> <br>
-    <div class="col-12 col-sm-12 col-md-12 col-lg-3">
+    </div> 
+    <div class="col-12 col-sm-12 col-md-12 col-lg-3"> <br>
       <h2 class="titulo_footer">Telefono</h2>
-      <font color="gray">350704717</font>
-    </div>
-    <div class="col-12 col-sm-12 col-md-12 col-lg-6">
-      <ul>
-        <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
-      </ul>
+      <font color="gray">350 704 4717</font>
     </div>
   </div>
 </div> <br>
