--- a/Contactenos/index.html
+++ b/Contactenos/index.html
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contactenos</title>
-     <!-- Bootstrap CSS -->
-     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600&display=swap" rel="stylesheet">
-     <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
-     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-   <!-- animaciones -->
-   <link
-   rel="stylesheet"
-   href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
- />
- <!-- Fontawesome -->
- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css">
- 
-     <link rel="stylesheet" href="style.css">
-   <link rel="shortcut icon" href="../imagenes/logo.png">
+  <meta charset="utf-8">
+  <link rel="stylesheet"  href="style.css" >
+  <title>Contacto</title>
+  <link rel="shortcut icon" href="/imagenes/logo.png" />
+  <!-- Required meta tags -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Fontawesome-->
+  <link rel="stylesheet" href="/bootstrap/all.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css">
+
+  <!-- Script-->
+   
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
+  <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">-->
+
+  <link href="style.css" rel="stylesheet">
+  <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+   <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600&display=swap" rel="stylesheet">
+  <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>-->
+  <script> src="js/bootstrap.min" </script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -32,19 +40,19 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav">
-                    <li class="nav-item hvr-overline-from-left ">
+                    <li class="nav-item  ">
                       <a class="nav-link" style="color: white;" href="../Inicio/index.html"  align="center">Inicio</a>
                     </li>
-                    <li class="nav-item hvr-overline-from-left ">
+                    <li class="nav-item  ">
                       <a class="nav-link" style="color: white;" href="../Menu/index.html"  align="center">Menú</a>
                     </li>
-                    <li class="nav-item hvr-overline-from-left ">
+                    <li class="nav-item  ">
                       <a class="nav-link"  style="color: white;" href="../Nosotros/nosotros.html" align="center">  Nosotros </a>
                     </li>
-                    <li class="nav-item hvr-overline-from-left ">
+                    <li class="nav-item ">
                       <a class="nav-link " style="color: white;"  href="#"  align="center">Testimonios</a>
                     </li>
-                    <li class="nav-item hvr-overline-from-left ">
+                    <li class="nav-item  ">
                       <a class="nav-link "  style="color: white;" href="../Contactenos/index.html" align="center">Contáctenos</a>
                     </li>
                   </ul>
@@ -86,39 +94,20 @@
               <h2 class="titulo_footer" >Dirección</h2>
               <font color="gray" >Carrea 45 a ,# 9-25, local 101, multifamiliares la esperanza, IV etapa</font>
             </div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-3">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-3"> <br>
               <h2 class="titulo_footer">Telefono</h2>
-              <font color="gray">350704717</font>
-            </div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-6">
-              <ul>
-                <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
-              </ul>
+              <font color="gray">350 7044 717</font>
             </div>
           </div>
         </div> <br>
         </footer>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script> src="js/bootstrap.min" </script>
+    
+    <script> src="js/bootstrap.min" </script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-    
 </body>
 </html>
