--- a/Menu/heladeria/Heladería.html
+++ b/Menu/heladeria/Heladería.html
@@ -25,7 +25,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-          <nav class="navbar navbar-expand-lg navbar-light">
+          <nav class="navbar navbar-expand-lg navbar-light ">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -217,18 +217,18 @@
           <h2 class="titulo_footer" >Dirección</h2>
           <font color="gray" >Carrea 45 a ,# 9-25, local 101, multifamilaires la esperanza, IV etapa</font>
         </div>
-        <div class="col-12 col-sm-12 col-md-12 col-lg-3">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-3"> <br>
           <h2 class="titulo_footer">Telefono</h2>
-          <font color="gray">350704717</font>
-        </div>
-        <div class="col-12 col-sm-12 col-md-12 col-lg-6">
-          <ul>
-            <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
-          </ul>
+          <font color="gray">350 704 4717</font>
         </div>
       </div>
     </div> <br>
   </footer>
-
+<!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script> src="js/bootstrap.min" </script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </body>
 </html>
