--- a/Menu/index.html
+++ b/Menu/index.html
@@ -128,14 +128,9 @@
             <h2 class="titulo_footer" >Dirección</h2>
             <font color="gray" >Carrea 45 a ,# 9-25, local 101, multifamilaires la esperanza, IV etapa</font>
           </div>
-          <div class="col-12 col-sm-12 col-md-12 col-lg-3">
+          <div class="col-12 col-sm-12 col-md-12 col-lg-3"> <br>
             <h2 class="titulo_footer">Telefono</h2>
             <font color="gray">350704717</font>
-          </div>
-          <div class="col-12 col-sm-12 col-md-12 col-lg-6">
-            <ul>
-              <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
-            </ul>
           </div>
         </div>
       </div> <br>
