--- a/Nosotros/nosotros.html
+++ b/Nosotros/nosotros.html
@@ -24,6 +24,12 @@
    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600&display=swap" rel="stylesheet">
   <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>-->
 
+  <!-- animaciones -->
+  <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+/>
+
   <link rel="shortcut icon" href="../imagenes/logito.png">
 </head>
 <body>
@@ -71,22 +77,22 @@
 <header class="head1"> <br>
   <div class="container">
     <div class="row"> 
-      <div class="col-12 col-sm-12 col-md-12 col-lg-6 caja"> 
+      <div class="col-12 col-sm-12 col-md-12 col-lg-6 caja animate__animated animate__fadeInLeftBig animate__delay-1s"> 
         <img src="../imagenes/team.svg" alt="" class="svg">
       </div>  
-      <div class="col-12 col-sm-12 col-md-12 col-lg-6 caja"  align="justify"> <br>
+      <div class="col-12 col-sm-12 col-md-12 col-lg-6 caja animate__animated animate__fadeInRightBig animate__delay-1s"  align="justify"> <br>
        <h1 class="titulo"> ¿Quienes somos?</h1>
        <font class="contenido">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime ullam suscipit voluptatem, mollitia nobis non eius rem, corrupti minus cupiditate libero soluta magnam, sunt iste temporibus. Illum omnis provident adipisci.Nostrum ratione laboriosam delectus, quam nesciunt quisquam possimus, totam placeat cupiditate unde ducimus sed! Provident libero architecto corporis voluptatibus eos maiores a numquam rerum voluptatum voluptatem harum, esse, minus rem.</font>
       </div>
     </div> <hr>
     <div class="row">
-      <div class="col-12 col-sm-12 col-md-12 col-lg-6 caja" align="justify"> <br>
+      <div class="col-12 col-sm-12 col-md-12 col-lg-6 caja animate__animated animate__fadeInLeftBig animate__delay-2s" align="justify"> <br>
         <h1 class="titulo">Misión</h1>
         <font class="contenido">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam vel explicabo corrupti praesentium totam earum recusandae consectetur illum at quis, ut rerum harum delectus rem saepe est. Possimus, quisquam natus.Officia blanditiis quis consequuntur. Inventore numquam consequuntur molestiae omnis vitae vero illo quae odit aliquid? Impedit porro eius eveniet ducimus doloribus vel facere qui, quas enim vero voluptatem fugit deserunt.</font> <br> <br>
         <h1 class="titulo">Visión</h1>
         <font class="contenido" >Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae mollitia sunt ratione? Illo, obcaecati inventore. Id itaque officiis doloremque est voluptates, maxime provident ducimus optio eaque adipisci quasi labore! Reiciendis?Mollitia incidunt laboriosam quidem earum temporibus dicta numquam nulla neque quia veniam dolore enim, molestias sit cupiditate, repellat quisquam! Culpa sequi atque quisquam earum eius beatae nemo corporis, nostrum quidem?</font> <br><br>
       </div> 
-      <div class="col-12 col-sm-12 col-md-12 col-lg-6 caja"> <br> <br>
+      <div class="col-12 col-sm-12 col-md-12 col-lg-6 caja animate__animated animate__fadeInRightBig animate__delay-2s"> <br> <br>
         <img src="../imagenes/progreso.svg" alt="" class="svg">
       </div> 
     </div> 
