--- a/Menu/index.html
+++ b/Menu/index.html
@@ -55,10 +55,10 @@
       <div class="container">
         <div class="row">
             <div class="col-12 col-sm-12 col-md-12 col-lg-6">
-                <img src="../imagenes/cafe1.2.svg" class="svg" alt="">
+                <img src="../imagenes/cafe1.2.svg" class="svg animate__animated animate__zoomInLeft" alt="">
             </div>
             <div class="col-12 col-sm-12 col-md-12 col-lg-6">
-              <h1 class="titulo">Conoce nuestros productos.</h1>
+              <h1 class="titulo animate__animated  animate__zoomInRight ">Conoce nuestros productos.</h1>
 
             </div>
         </div> <br>
@@ -70,8 +70,8 @@
       <div class="container">
         <div class="row">
           <div class="col-12 col-sm-12 col-md-12 col-lg-6 ">
-            <div class="imagen_servicio  ">
-              <a href=""><img class="servicio_imagen " src="../imagenes/as.jpg" width="100%" height="100%" /></a> 
+            <div class="imagen_servicio animate__animated animate__fadeInLeftBig animate__delay-1s">
+              <a href=""><img class="servicio_imagen  " src="../imagenes/as.jpg" width="100%" height="100%" /></a> 
               <div class="texto_transicion ">
                 <a href="/Menu/bebidas/Bebidas.html"><h1 class="titulo_servicio">Bebidas</h1></a>
                 <p class="texto_servicio">
@@ -82,7 +82,7 @@
             </div> 
            </div> 
            <div class="col-12 col-sm-12 col-md-12 col-lg-6 ">
-            <div class="imagen_servicio  ">
+            <div class="imagen_servicio animate__animated animate__fadeInRightBig animate__delay-1s">
               <a href="/Menu/heladeria/Heladería.html"><img class="servicio_imagen " src="../imagenes/as.jpg" width="100%" height="100%"  /></a> 
               <div class="texto_transicion ">
                 <a href="/Menu/heladeria/Heladería.html"><h1 class="titulo_servicio">Heladería</h1></a>
@@ -99,7 +99,7 @@
 
           </div>
           <div class="col-12 col-sm-12 col-md-12 col-lg-6 ">
-            <div class="imagen_servicio  ">
+            <div class="imagen_servicio animate__animated animate__fadeInUpBig animate__delay-2s ">
               <a href="/Menu/cafeteria/cafeteria.html"><img class="servicio_imagen " src="../imagenes/as.jpg" width="100%"  /></a> 
               <div class="texto_transicion ">
                 <a href="/Menu/cafeteria/cafeteria.html" class="titulo_servicio">Cafetería</h1></a>
