--- a/Contactenos/index.html
+++ b/Contactenos/index.html
@@ -46,19 +46,19 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav">
-                    <li class="nav-item  ">
+                    <li class="nav-item hvr-overline-from-left ">
                       <a class="nav-link" style="color: white;" href="../Inicio/index.html"  align="center">Inicio</a>
                     </li>
-                    <li class="nav-item  ">
+                    <li class="nav-item hvr-overline-from-left ">
                       <a class="nav-link" style="color: white;" href="../Menu/index.html"  align="center">Menú</a>
                     </li>
-                    <li class="nav-item  ">
+                    <li class="nav-item hvr-overline-from-left ">
                       <a class="nav-link"  style="color: white;" href="../Nosotros/nosotros.html" align="center">  Nosotros </a>
                     </li>
-                    <li class="nav-item ">
+                    <li class="nav-item hvr-overline-from-left">
                       <a class="nav-link " style="color: white;"  href="#"  align="center">Testimonios</a>
                     </li>
-                    <li class="nav-item  ">
+                    <li class="nav-item hvr-overline-from-left ">
                       <a class="nav-link "  style="color: white;" href="../Contactenos/index.html" align="center">Contáctenos</a>
                     </li>
                   </ul>
