--- a/Menu/heladeria/Heladería.html
+++ b/Menu/heladeria/Heladería.html
@@ -92,7 +92,7 @@
           </div>
           <div class="col-12 col-sm-12 col-md-12 col-lg-6">
             <div class="imagen_servicio animate__animated animate__fadeInRightBig animate__delay-1s   ">
-              <img class="servicio_imagen " src="/imagenes/asd.jpg" width="100%"  height="100%"/>
+              <img class="servicio_imagen " src="/imagenes/CAFETERIA 3.jpg" width="100%"  height="100%"/>
               <div class="texto_transicion " align="justify"> 
                 <h1 class="titulo_servicio">Piña con helado</h1></a>
                 <p class="texto_servicio">
@@ -122,7 +122,7 @@
           </div>
           <div class="col-12 col-sm-12 col-md-12 col-lg-6">
             <div class="imagen_servicio animate__animated animate__fadeInRightBig animate__delay-1s   ">
-              <img class="servicio_imagen " src="/imagenes/asd.jpg" width="100%"  height="100%"/>
+              <img class="servicio_imagen " src="/imagenes/CAFETERIA 2.jpg" width="100%"  height="100%"/>
               <div class="texto_transicion " align="justify"> 
                <h1 class="titulo_servicio">Ensalada de frutas</h1></a>
                 <p class="texto_servicio">
@@ -152,7 +152,7 @@
         <div class="row">
             <div class="col-12 col-sm-12 col-md-12 col-lg-6">
                 <div class="imagen_servicio animate__animated animate__fadeInLeftBig animate__delay-2s  ">
-                  <img class="servicio_imagen " src="/imagenes/asd.jpg" width="100%" />
+                  <img class="servicio_imagen " src="/imagenes/CAFETERIA 1.jpg" width="100%" />
                   <div class="texto_transicion2 " align="justify"> 
                    <h1 class="titulo_servicio">Caseros</h1></a>
                     <p class="texto_servicio">
@@ -165,7 +165,7 @@
               </div>
               <div class="col-12 col-sm-12 col-md-12 col-lg-6">
                 <div class="imagen_servicio animate__animated animate__fadeInRightBig animate__delay-2s ">
-                  <img class="servicio_imagen " src="/imagenes/asd.jpg" width="100%"  height="100%"/>
+                  <img class="servicio_imagen " src="/imagenes/CAFETERIA 4.jpg" width="100%"  height="100%"/>
                   <div class="texto_transicion2 " align="justify"> 
                     <h1 class="titulo_servicio">Parfruit</h1></a>
                     <p class="texto_servicio">
