--- a/Menu/index.html
+++ b/Menu/index.html
@@ -73,7 +73,7 @@
             <div class="imagen_servicio animate__animated animate__fadeInLeftBig animate__delay-1s">
               <a href=""><img class="servicio_imagen  " src="../imagenes/as.jpg" width="100%" height="100%" /></a> 
               <div class="texto_transicion ">
-                <a href="/Menu/bebidas/Bebidas.html"><h1 class="titulo_servicio">Bebidas</h1></a>
+                <h1 class="titulo_servicio">Bebidas</h1>
                 <p class="texto_servicio">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus dolor cupiditate modi reprehenderit dolorum voluptas asperiores minima velit est repellat porro, molestias dolores sunt maiores quia at ut corrupti praesentium.
                 </p>
@@ -85,7 +85,7 @@
             <div class="imagen_servicio animate__animated animate__fadeInRightBig animate__delay-1s">
               <a href="/Menu/heladeria/Heladería.html"><img class="servicio_imagen " src="../imagenes/as.jpg" width="100%" height="100%"  /></a> 
               <div class="texto_transicion ">
-                <a href="/Menu/heladeria/Heladería.html"><h1 class="titulo_servicio">Heladería</h1></a>
+                <h1 class="titulo_servicio">Heladería</h1>
                 <p class="texto_servicio">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus dolor cupiditate modi reprehenderit dolorum voluptas asperiores minima velit est repellat porro, molestias dolores sunt maiores quia at ut corrupti praesentium.
                 </p>
@@ -102,7 +102,7 @@
             <div class="imagen_servicio animate__animated animate__fadeInUpBig animate__delay-2s ">
               <a href="/Menu/cafeteria/cafeteria.html"><img class="servicio_imagen " src="../imagenes/as.jpg" width="100%"  /></a> 
               <div class="texto_transicion ">
-                <a href="/Menu/cafeteria/cafeteria.html" class="titulo_servicio">Cafetería</h1></a>
+                <h1 class="titulo_servicio">Cafetería</h1>
                 <p class="texto_servicio">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus dolor cupiditate modi reprehenderit dolorum voluptas asperiores minima velit est repellat porro, molestias dolores sunt maiores quia at ut corrupti praesentium.
                 </p>
