--- a/Contactenos/index.html
+++ b/Contactenos/index.html
@@ -2,21 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet"  href="style.css" >
+  <link rel="stylesheet"  href="../Contactenos/style.css" >
   <title>Contacto</title>
-  <link rel="shortcut icon" href="/imagenes/logo.png" />
+  <link rel="shortcut icon" href="../imagenes/logo.png" />
   <!-- Required meta tags -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Fontawesome-->
-  <link rel="stylesheet" href="/bootstrap/all.css">
+  <link rel="stylesheet" href="../bootstrap/all.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css">
 
   <!-- Script-->
    
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../bootstrap/bootstrap.min.css">
   <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">-->
 
   <link href="style.css" rel="stylesheet">
