--- a/Contactenos/index.html
+++ b/Contactenos/index.html
@@ -33,6 +33,8 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
+  <!-- Fontawesome -->
+ <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css">
 </head>
 <body>
 
@@ -70,7 +72,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 col-sm-12 col-md-12 col-lg-6">
-                  <div class="formulario">
+                  <!-- <div class="formulario">
                     <h1 class="titulo_formulario">Contáctanos</h1> <br>
                     <form action="">
                         <input class="nombre" type="text" placeholder="Nombre"> 
@@ -79,10 +81,17 @@
                         <input class="mail"type="email" placeholder="e-mail"> <br>
                         <input  class="Mensaje" type="text" placeholder="Mensaje"> <br>
                     </form>
-                  </div>
+                  </div> -->
+                  <h1> Mandanos un mensaje</h1>
+                  <img src="../imagenes/asd.jpg" class="foto" alt=""> <br> <br>
+                  <i class="fab fa-whatsapp" style="font-size: 100px;"></i>
+                  <a class="btn btn-primary boton boton2 hvr-grow animate__animated animate__fadeInDown animate__delay-2s" href="https://api.whatsapp.com/send?phone=573507044717&text=Hola%20desearía%20más%20información" role="button"></i>   Escribenos a nuestro whatsapp</a> 
+
+                  
                 </div> 
                 <div class="col-12 col-sm-12 col-md-12 col-lg-6" > 
                   <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d994.8674813199672!2d-73.63664357086336!3d4.127541837439075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3e2e115f9c029b%3A0x2d0d2f3268c296d4!2sCra.%2045a%20%239-25%2C%20Villavicencio%2C%20Meta!5e0!3m2!1ses!2sco!4v1605731503985!5m2!1ses!2sco" ></iframe>
+                  
                 </div>
             </div>
         </div> <br>
