--- a/Contactenos/index.html
+++ b/Contactenos/index.html
@@ -82,7 +82,7 @@
                         <input  class="Mensaje" type="text" placeholder="Mensaje"> <br>
                     </form>
                   </div> -->
-                  <h1> Mandanos un mensaje</h1>
+                  <h1> Envianos un mensaje</h1>
                   <img src="../imagenes/asd.jpg" class="foto" alt=""> <br> <br>
                   <i class="fab fa-whatsapp" style="font-size: 100px;"></i>
                   <a class="btn btn-primary boton boton2 hvr-grow animate__animated animate__fadeInDown animate__delay-2s" href="https://api.whatsapp.com/send?phone=573507044717&text=Hola%20desearía%20más%20información" role="button"></i>   Escribenos a nuestro whatsapp</a> 
@@ -107,10 +107,10 @@
           <div class="row">
             <div class="col-12 col-sm-12 col-md-12 col-lg-3">
               <h2 class="titulo_footer" >Dirección</h2>
-              <font color="gray" >Carrea 45 a ,# 9-25, local 101, multifamiliares la esperanza, IV etapa</font>
+              <font color="gray" >Carrea 45 a ,# 9-25, local 101, multifamiliares La Esperanza, IV etapa</font>
             </div>
             <div class="col-12 col-sm-12 col-md-12 col-lg-3"> <br>
-              <h2 class="titulo_footer">Telefono</h2>
+              <h2 class="titulo_footer">Teléfono</h2>
               <font color="gray">350 7044 717</font>
             </div>
           </div>
