--- a/Menu/bebidas/Bebidas.html
+++ b/Menu/bebidas/Bebidas.html
@@ -33,19 +33,19 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item hvr-overline-from-left ">
-                  <a class="nav-link" style="color: white;" href="/Inicio/index.html"  align="center">Inicio</a>
+                  <a class="nav-link" style="color: white;" href="../../Inicio/index.html"  align="center">Inicio</a>
                 </li>
                 <li class="nav-item hvr-overline-from-left ">
-                  <a class="nav-link" style="color: white;" href="/Menu/index.html"  align="center">Menú</a>
+                  <a class="nav-link" style="color: white;" href="../../Menu/index.html"  align="center">Menú</a>
                 </li>
                 <li class="nav-item hvr-overline-from-left ">
-                  <a class="nav-link"  style="color: white;" href="/Nosotros/nosotros.html" align="center">  Nosotros </a>
+                  <a class="nav-link"  style="color: white;" href="../../Nosotros/nosotros.html" align="center">  Nosotros </a>
                 </li>
                 <li class="nav-item hvr-overline-from-left ">
                   <a class="nav-link " style="color: white;"  href="#"  align="center">Testimonios</a>
                 </li>
                 <li class="nav-item hvr-overline-from-left ">
-                  <a class="nav-link "  style="color: white;" href="/Contactenos/index.html" align="center">Contáctenos</a>
+                  <a class="nav-link "  style="color: white;" href="../../Contactenos/index.html" align="center">Contáctenos</a>
                 </li>
               </ul>
             </div>
@@ -222,13 +222,13 @@
           
         </div>
         <div class="col-12 col-sm-12 col-md-12 col-lg-2" align="center">
-          <a href="/Menu/bebidas/Bebidas.html" class="sub-menu hvr-grow-shadow"> Bebidas</a>
+          <a href="../../Menu/bebidas/Bebidas.html" class="sub-menu hvr-grow-shadow"> Bebidas</a>
         </div>
         <div class="col-12 col-sm-12 col-md-12 col-lg-2" align="center">
-          <a href="/Menu/heladeria/Heladería.html" class="sub-menu hvr-grow-shadow"> Heladería</a>
+          <a href="../../Menu/heladeria/Heladería.html" class="sub-menu hvr-grow-shadow"> Heladería</a>
         </div>
         <div class="col-12 col-sm-12 col-md-12 col-lg-2" align="center">
-          <a href="/Menu/cafeteria/cafeteria.html" class="sub-menu hvr-grow-shadow"> Cafeteria</a>
+          <a href="../../Menu/cafeteria/cafeteria.html" class="sub-menu hvr-grow-shadow"> Cafeteria</a>
         </div>
       </div>
     </div> <br>
@@ -240,10 +240,10 @@
       <div class="row">
         <div class="col-12 col-sm-12 col-md-12 col-lg-3">
           <h2 class="titulo_footer" >Dirección</h2>
-          <font color="gray" >Carrea 45 a ,# 9-25, local 101, multifamilaires la esperanza, IV etapa</font>
+          <font color="gray" >Carrea 45 a ,# 9-25, local 101, multifamiliares La Esperanza, IV etapa</font>
         </div>
         <div class="col-12 col-sm-12 col-md-12 col-lg-3"> <br>
-          <h2 class="titulo_footer">Telefono</h2>
+          <h2 class="titulo_footer">Teléfono</h2>
           <font color="gray">350 704 4717</font>
         </div>
       </div>
