--- a/Menu/index.html
+++ b/Menu/index.html
@@ -77,19 +77,19 @@
                 <p class="texto_servicio">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus dolor cupiditate modi reprehenderit dolorum voluptas asperiores minima velit est repellat porro, molestias dolores sunt maiores quia at ut corrupti praesentium.
                 </p>
-                <a class="btn btn-primary boton" href="/Menu/bebidas/Bebidas.html" role="button">Pruebalos.</a> <br>
+                <a class="btn btn-primary boton" href="./bebidas/Bebidas.html" role="button">Pruebalos.</a> <br>
               </div>
             </div> 
            </div> 
            <div class="col-12 col-sm-12 col-md-12 col-lg-6 ">
             <div class="imagen_servicio animate__animated animate__fadeInRightBig animate__delay-1s">
-              <a href="/Menu/heladeria/Heladería.html"><img class="servicio_imagen " src="../imagenes/as.jpg" width="100%" height="100%"  /></a> 
+              <a href="./heladeria/Heladería.html"><img class="servicio_imagen " src="../imagenes/as.jpg" width="100%" height="100%"  /></a> 
               <div class="texto_transicion ">
                 <h1 class="titulo_servicio">Heladería</h1>
                 <p class="texto_servicio">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus dolor cupiditate modi reprehenderit dolorum voluptas asperiores minima velit est repellat porro, molestias dolores sunt maiores quia at ut corrupti praesentium.
                 </p>
-                <a class="btn btn-primary" href="/Menu/heladeria/Heladería.html" role="button">Pruebalos.</a> <br>
+                <a class="btn btn-primary" href="./heladeria/Heladería.html" role="button">Pruebalos.</a> <br>
               </div>
             </div> 
            </div>
@@ -100,13 +100,13 @@
           </div>
           <div class="col-12 col-sm-12 col-md-12 col-lg-6 ">
             <div class="imagen_servicio animate__animated animate__fadeInUpBig animate__delay-2s ">
-              <a href="/Menu/cafeteria/cafeteria.html"><img class="servicio_imagen " src="../imagenes/as.jpg" width="100%"  /></a> 
+              <a href="./cafeteria/cafeteria.html"><img class="servicio_imagen " src="../imagenes/as.jpg" width="100%"  /></a> 
               <div class="texto_transicion ">
                 <h1 class="titulo_servicio">Cafetería</h1>
                 <p class="texto_servicio">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus dolor cupiditate modi reprehenderit dolorum voluptas asperiores minima velit est repellat porro, molestias dolores sunt maiores quia at ut corrupti praesentium.
                 </p>
-                <a class="btn btn-primary" href="/Menu/cafeteria/cafeteria.html" role="button">Pruebalos.</a> <br>
+                <a class="btn btn-primary" href="./cafeteria/cafeteria.html" role="button">Pruébalos.</a> <br>
               </div>
             </div> 
            </div>
@@ -126,10 +126,10 @@
         <div class="row">
           <div class="col-12 col-sm-12 col-md-12 col-lg-3">
             <h2 class="titulo_footer" >Dirección</h2>
-            <font color="gray" >Carrea 45 a ,# 9-25, local 101, multifamilaires la esperanza, IV etapa</font>
+            <font color="gray" >Carrea 45 a ,# 9-25, local 101, multifamiliares La Esperanza, IV etapa</font>
           </div>
           <div class="col-12 col-sm-12 col-md-12 col-lg-3"> <br>
-            <h2 class="titulo_footer">Telefono</h2>
+            <h2 class="titulo_footer">Teléfono</h2>
             <font color="gray">350704717</font>
           </div>
         </div>
