--- a/Inicio/index.html
+++ b/Inicio/index.html
@@ -35,7 +35,7 @@
               <a class="nav-link" style="color: white;" href="../Inicio/index.html"  align="center">Inicio</a>
             </li>
             <li class="nav-item hvr-overline-from-left ">
-              <a class="nav-link" style="color: white;" href="/Menu/index.html"  align="center">Menú</a>
+              <a class="nav-link" style="color: white;" href="../Menu/index.html"  align="center">Menú</a>
             </li>
             <li class="nav-item hvr-overline-from-left ">
               <a class="nav-link"  style="color: white;" href="../Nosotros/nosotros.html" align="center">  Nosotros </a>
