--- a/Menu/heladeria/Heladería.html
+++ b/Menu/heladeria/Heladería.html
@@ -215,10 +215,10 @@
       <div class="row">
         <div class="col-12 col-sm-12 col-md-12 col-lg-3">
           <h2 class="titulo_footer" >Dirección</h2>
-          <font color="gray" >Carrea 45 a ,# 9-25, local 101, multifamilaires la esperanza, IV etapa</font>
+          <font color="gray" >Carrea 45 a ,# 9-25, local 101, multifamiliares La Esperanza, IV etapa</font>
         </div>
         <div class="col-12 col-sm-12 col-md-12 col-lg-3"> <br>
-          <h2 class="titulo_footer">Telefono</h2>
+          <h2 class="titulo_footer">Teléfono</h2>
           <font color="gray">350 704 4717</font>
         </div>
       </div>
