--- a/Nosotros/nosotros.html
+++ b/Nosotros/nosotros.html
@@ -76,21 +76,24 @@
 
 <header class="head1"> <br>
   <div class="container">
-    <div class="row"> 
-      <div class="col-12 col-sm-12 col-md-12 col-lg-6 caja animate__animated animate__fadeInLeftBig animate__delay-1s"> 
-        <img src="../imagenes/team.svg" alt="" class="svg">
-      </div>  
+    <div class="row">  
       <div class="col-12 col-sm-12 col-md-12 col-lg-6 caja animate__animated animate__fadeInRightBig animate__delay-1s"  align="justify"> <br>
        <h1 class="titulo"> ¿Quienes somos?</h1>
-       <font class="contenido">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime ullam suscipit voluptatem, mollitia nobis non eius rem, corrupti minus cupiditate libero soluta magnam, sunt iste temporibus. Illum omnis provident adipisci.Nostrum ratione laboriosam delectus, quam nesciunt quisquam possimus, totam placeat cupiditate unde ducimus sed! Provident libero architecto corporis voluptatibus eos maiores a numquam rerum voluptatum voluptatem harum, esse, minus rem.</font>
+       <font class="contenido">Somos un negocio familiar preocupado por la nutrición y alimentación de nuestros clientes. Sabemos que el ritmo de vida actual no permite elaborar
+         productos saludables en casa. Por lo tanto, hemos decidido ser la alternativa para que nuestros clientes puedan seguir alimentandose bien y de manera saludable. Al mismo tiempo
+         que disfrutan de alimentos y bebidas atractivos, deliciosos y novedosos.
+       </font>
       </div>
+      <div class="col-12 col-sm-12 col-md-12 col-lg-6 caja animate__animated animate__fadeInLeftBig animate__delay-1s"> 
+        <img src="../imagenes/team.svg" alt="" class="svg">
+      </div> 
     </div> <hr>
     <div class="row">
       <div class="col-12 col-sm-12 col-md-12 col-lg-6 caja animate__animated animate__fadeInLeftBig animate__delay-2s" align="justify"> <br>
         <h1 class="titulo">Misión</h1>
-        <font class="contenido">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam vel explicabo corrupti praesentium totam earum recusandae consectetur illum at quis, ut rerum harum delectus rem saepe est. Possimus, quisquam natus.Officia blanditiis quis consequuntur. Inventore numquam consequuntur molestiae omnis vitae vero illo quae odit aliquid? Impedit porro eius eveniet ducimus doloribus vel facere qui, quas enim vero voluptatem fugit deserunt.</font> <br> <br>
+        <font class="contenido">Elaboramos productos alimenticios nutritivos y saludables bajos en azucar y grasas y libres de conservantes que ayuden a mejorar la calidad de vida de la población llanera con sobrepeso o que desea tener y mantener hábitos alimenticios más saludables.</font> <br> <br>
         <h1 class="titulo">Visión</h1>
-        <font class="contenido" >Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae mollitia sunt ratione? Illo, obcaecati inventore. Id itaque officiis doloremque est voluptates, maxime provident ducimus optio eaque adipisci quasi labore! Reiciendis?Mollitia incidunt laboriosam quidem earum temporibus dicta numquam nulla neque quia veniam dolore enim, molestias sit cupiditate, repellat quisquam! Culpa sequi atque quisquam earum eius beatae nemo corporis, nostrum quidem?</font> <br><br>
+        <font class="contenido" >Para el año 2025 ser la empresa de referencia a nivel regional en la elaboración y preparación de alimentos nutritivos y saludables para la población llanera que desea adquirir y mantener habitos alimenticios saludables en su dia a dia, mediante la elaboración de productos atractivos, deliciosos y novedosos. </font> <br><br>
       </div> 
       <div class="col-12 col-sm-12 col-md-12 col-lg-6 caja animate__animated animate__fadeInRightBig animate__delay-2s"> <br> <br>
         <img src="../imagenes/progreso.svg" alt="" class="svg">
@@ -104,7 +107,7 @@
     <div class="row"> 
       <div class="col-12 col-sm-12 col-md-12 col-lg-12  caja2" align="center"> <br> <br>
         <h1 class="titulo">Conoce más</h1> <br>
-        <a href="../Contactenos/index.html" class="boton hvr-grow hvr-sweep-to-top">Contactanos.</a> <br> <br> <br>
+        <a href="../Contactenos/index.html" class="boton hvr-grow hvr-sweep-to-top">Contáctanos.</a> <br> <br> <br>
       </div> 
     </div> 
   </div> 
@@ -116,10 +119,10 @@
   <div class="row">
     <div class="col-12 col-sm-12 col-md-12 col-lg-3">
       <h2 class="titulo_footer">Dirección</h2>
-      <font color="gray">Carrea 45 a ,# 9-25, local 101, multifamilaires la esperanza, IV etapa</font>
+      <font color="gray">Carrea 45 a ,# 9-25, local 101, multifamiliares La Esperanza, IV etapa</font>
     </div> 
     <div class="col-12 col-sm-12 col-md-12 col-lg-3"> <br>
-      <h2 class="titulo_footer">Telefono</h2>
+      <h2 class="titulo_footer">Teléfono</h2>
       <font color="gray">350 704 4717</font>
     </div>
   </div>
