--- a/Menu/index.html
+++ b/Menu/index.html
@@ -17,7 +17,7 @@
  <!-- Fontawesome -->
  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css">
  
-     <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="../Menu/style.css">
    <link rel="shortcut icon" href="../imagenes/logo.png">
 </head>
 <body>
@@ -52,30 +52,21 @@
           </div>
         </div>
       </div> <br>
-      <div class="container">
-        <div class="row">
-            <div class="col-12 col-sm-12 col-md-12 col-lg-6">
-                <img src="../imagenes/cafe1.2.svg" class="svg animate__animated animate__zoomInLeft" alt="">
-            </div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-6">
-              <h1 class="titulo animate__animated  animate__zoomInRight ">Conoce nuestros productos.</h1>
 
-            </div>
-        </div> <br>
-      </div>
-    </header>
-
-
-    <header class="head1"> <br>
       <div class="container">
         <div class="row">
           <div class="col-12 col-sm-12 col-md-12 col-lg-6 ">
             <div class="imagen_servicio animate__animated animate__fadeInLeftBig animate__delay-1s">
-              <a href=""><img class="servicio_imagen  " src="../../cortezas/imagenes/batidos.jpg" width="100%" height="100%" /></a> 
+              
+              <div>
+                <a href=""><img class="servicio_borde servicio_imagen" src="../../cortezas/imagenes/batidos.jpg" width="100%" height="100%" ></a> 
+              </div>
               <div class="texto_transicion ">
                 <h1 class="titulo_servicio">Bebidas</h1>
                 <p class="texto_servicio">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus dolor cupiditate modi reprehenderit dolorum voluptas asperiores minima velit est repellat porro, molestias dolores sunt maiores quia at ut corrupti praesentium.
+                  Tenemos los mejores batidos con todas las propiedades y beneficios de los alimentos naturales que mantienen la buena salud,
+                  desintoxican y ayudan en los procesos digestivos haciendote sentir con más energia, sano y 100% más saludable! (pregunta por nuestro
+                  plan mensual detox o de adelgazamiento). 
                 </p>
                 <a class="btn btn-primary boton" href="./bebidas/Bebidas.html" role="button">Pruebalos.</a> <br>
               </div>
@@ -83,11 +74,11 @@
            </div> 
            <div class="col-12 col-sm-12 col-md-12 col-lg-6 ">
             <div class="imagen_servicio animate__animated animate__fadeInRightBig animate__delay-1s">
-              <a href="./heladeria/Heladería.html"><img class="servicio_imagen " src="../imagenes/piña.jpg" width="100%" height="100%"  /></a> 
+              <a href="./heladeria/Heladería.html"><img class="servicio_imagen servicio_borde" src="../imagenes/piña.jpg" width="100%" height="100%" style="border-radius: 5%;"></a> 
               <div class="texto_transicion ">
                 <h1 class="titulo_servicio">Heladería</h1>
                 <p class="texto_servicio">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus dolor cupiditate modi reprehenderit dolorum voluptas asperiores minima velit est repellat porro, molestias dolores sunt maiores quia at ut corrupti praesentium.
+                  En nuestra carta de heladeria podrás encontrar helados caseros, banana split, piña con helado, ensaladas de frutas, parfait, etc. Click y pide el tuyo!
                 </p>
                 <a class="btn btn-primary" href="./heladeria/Heladería.html" role="button">Pruebalos.</a> <br>
               </div>
@@ -98,13 +89,15 @@
           <div class="col-12 col-sm-12 col-md-12 col-lg-3">
 
           </div>
-          <div class="col-12 col-sm-12 col-md-12 col-lg-6 ">
+          <div class="col-12 col-sm-12 col-md-12 col-lg-6" >
             <div class="imagen_servicio animate__animated animate__fadeInUpBig animate__delay-2s ">
-              <a href="./cafeteria/cafeteria.html"><img class="servicio_imagen " src="../imagenes/as.jpg" width="100%"  /></a> 
+              <div>
+                <a href="./cafeteria/cafeteria.html"><img class="servicio_imagen servicio_borde" src="../imagenes/cafe.jpg" width="100%" style="border-radius: 5%;"></a>
+              </div>
               <div class="texto_transicion ">
                 <h1 class="titulo_servicio">Cafetería</h1>
                 <p class="texto_servicio">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus dolor cupiditate modi reprehenderit dolorum voluptas asperiores minima velit est repellat porro, molestias dolores sunt maiores quia at ut corrupti praesentium.
+                  Cuando tienes un dia largo de trabajo tu cuerpo necesita adquirir y restablecer energias, un cafecito, un buen sánduche siempre vienen bien ¡a cualquier hora del dia! <br>¡ordena el tuyo ahora!
                 </p>
                 <a class="btn btn-primary" href="./cafeteria/cafeteria.html" role="button">Pruébalos.</a> <br>
               </div>
@@ -117,6 +110,7 @@
         </div>
       </div> <br>
     </header>
+  
 
 
 
