--- a/Menu/index.html
+++ b/Menu/index.html
@@ -59,7 +59,7 @@
             <div class="imagen_servicio animate__animated animate__fadeInLeftBig animate__delay-1s">
               
               <div>
-                <a href=""><img class="servicio_borde servicio_imagen" src="../../cortezas/imagenes/batidos.jpg" width="100%" height="100%" ></a> 
+                <a href=""><img class="servicio_borde servicio_imagen" src="../../cortezas/imagenes/jugo.jpg" width="100%" height="100%" ></a> 
               </div>
               <div class="texto_transicion ">
                 <h1 class="titulo_servicio">Bebidas</h1>
@@ -74,7 +74,7 @@
            </div> 
            <div class="col-12 col-sm-12 col-md-12 col-lg-6 ">
             <div class="imagen_servicio animate__animated animate__fadeInRightBig animate__delay-1s">
-              <a href="./heladeria/Heladería.html"><img class="servicio_imagen servicio_borde" src="../imagenes/piña.jpg" width="100%" height="100%" style="border-radius: 5%;"></a> 
+              <a href="./heladeria/Heladería.html"><img class="servicio_imagen servicio_borde" src="../imagenes/heladeria.jpg" width="100%" height="100%" style="border-radius: 5%;"></a> 
               <div class="texto_transicion ">
                 <h1 class="titulo_servicio">Heladería</h1>
                 <p class="texto_servicio">
