--- a/Contactenos/index.html
+++ b/Contactenos/index.html
@@ -37,7 +37,7 @@
  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css">
 </head>
 <body>
-
+   
     <header class="head0">
         <div class="container-fluid">
           <div class="row">
@@ -47,23 +47,23 @@
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                  <ul class="navbar-nav">
-                    <li class="nav-item hvr-overline-from-left ">
-                      <a class="nav-link" style="color: white;" href="../Inicio/index.html"  align="center">Inicio</a>
-                    </li>
-                    <li class="nav-item hvr-overline-from-left ">
-                      <a class="nav-link" style="color: white;" href="../Menu/index.html"  align="center">Menú</a>
-                    </li>
-                    <li class="nav-item hvr-overline-from-left ">
-                      <a class="nav-link"  style="color: white;" href="../Nosotros/nosotros.html" align="center">  Nosotros </a>
-                    </li>
-                    <li class="nav-item hvr-overline-from-left">
-                      <a class="nav-link " style="color: white;"  href="#"  align="center">Testimonios</a>
-                    </li>
-                    <li class="nav-item hvr-overline-from-left ">
-                      <a class="nav-link "  style="color: white;" href="../Contactenos/index.html" align="center">Contáctenos</a>
-                    </li>
-                  </ul>
+                    <ul class="navbar-nav">
+                      <li class="nav-item hvr-overline-from-left ">
+                        <a class="nav-link" style="color: white;" href="../Inicio/index.html"  align="center">Inicio</a>
+                      </li>
+                      <li class="nav-item hvr-overline-from-left ">
+                        <a class="nav-link" style="color: white;" href="../Menu/index.html"  align="center">Menú</a>
+                      </li>
+                      <li class="nav-item hvr-overline-from-left ">
+                        <a class="nav-link"  style="color: white;" href="../Nosotros/nosotros.html" align="center">  Nosotros </a>
+                      </li>
+                      <li class="nav-item hvr-overline-from-left">
+                        <a class="nav-link " style="color: white;"  href="#"  align="center">Testimonios</a>
+                      </li>
+                      <li class="nav-item hvr-overline-from-left ">
+                        <a class="nav-link "  style="color: white;" href="../Contactenos/index.html" align="center">Contáctenos</a>
+                      </li>
+                    </ul>
                 </div>
               </nav>
             </div>
@@ -83,7 +83,7 @@
                     </form>
                   </div> -->
                   <h1> Envianos un mensaje</h1>
-                  <img src="../imagenes/asd.jpg" class="foto" alt=""> <br> <br>
+                  <img src="../imagenes/contactanos.jpg" class="foto" alt=""> <br> <br>
                   <i class="fab fa-whatsapp" style="font-size: 100px;"></i>
                   <a class="btn btn-primary boton boton2 hvr-grow animate__animated animate__fadeInDown animate__delay-2s" href="https://api.whatsapp.com/send?phone=573507044717&text=Hola%20desearía%20más%20información" role="button"></i>   Escribenos a nuestro whatsapp</a> 
 
