--- a/Inicio/index.html
+++ b/Inicio/index.html
@@ -20,12 +20,12 @@
   <link rel="shortcut icon" href="../imagenes/logo.png">
 </head>
 <body>
-   
-  <header class="head1">
+<header class="head1">
+
     <div class="container-fluid">
       <div class="row">
-        <div class="col-12 col-sm-12 col-md-12 col-lg-5">
-    <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+         <nav class="navbar navbar-expand-lg navbar-light">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -50,34 +50,38 @@
         </div>
       </nav>
     </div>
-      <div class="col-12 col-sm-12 col-md-12 col-lg-7">
-                <div class="contenedor_logo" align="center">
-                    <img src="../imagenes/logo.png" alt="" class="logo">
-                </div> 
+</header>
+<header class="head0">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+          <div>
+            <div style="position: absolute;">
+              <img class="portada" src= "../imagenes/portada_cortezas.jpg" alt="fondo">
+            </div>
+          <div  class="contenedor_logo" align="center">
+            <img src="../imagenes/logo.png" alt="" class="logo">
+          </div>
+          <div class="contenedor_titulo" align="center">
+              <h1 class="titulo">
+                  Cortezas
+              </h1>
+          </div> <br> <br> <br> <br> <br>
 
-                <div class="contenedor_titulo" align="center">
-                    <h1 class="titulo">
-                        Cortezas
-                    </h1>
-                </div> <br> <br> <br> <br> <br>
-
-                <div class="contenedor_info" align="end">
-                    <p class="texto">
-                        Vida saludable, <br>
-                        productos saludables, <br>
-                        Villavicencio
-                    </p>
-                  </div> <br>
-                    <div align="center" class="contenedor_boton">
-                        <a href="../Nosotros/nosotros.html" class="boton hvr-sweep-to-right hvr-grow" align="center">Conoce más</a>
-                    </div>
-            </div>  
-        </div>
+          <div class="contenedor_info" align="end">
+              <p class="texto">
+                  Vida saludable, <br>
+                  productos saludables, <br>
+                  Villavicencio
+              </p>
+          </div> <br>
+          <div align="center" class="contenedor_boton">
+                <a href="../Nosotros/nosotros.html" class="boton hvr-sweep-to-right hvr-grow" align="center">Conoce más</a>
+          </div>
+        </div>  
+      </div>
     </div>
-  </header> 
-   
-
-    
+  </header>
 
 
 
