--- a/Inicio/index.html
+++ b/Inicio/index.html
@@ -58,7 +58,7 @@
 
   <div class="container-fluid">
     <div class="row">
-      <div style="position: relative; left: 620px;" class="col-12 col-sm-12 col-md-12 col-lg-12">
+      <div style="position: fixed; left: 620px;" class="col-12 col-sm-12 col-md-12 col-lg-12">
          
         <div class="logobox" >
         
