--- a/Inicio/index.html
+++ b/Inicio/index.html
@@ -20,14 +20,14 @@
   <link rel="shortcut icon" href="../imagenes/logo.png">
 </head>
 <body>
- 
-<header class="head1">
-  <div style="position: absolute;">
+  <div style="position: absolute; height:100%;"> <!--fixed--> 
     <img class="portada" src= "../imagenes/portada_cortezas.jpg" alt="fondo">
   </div>
+<header class="head1">
+  
     <div class="container-fluid">
       <div class="row">
-        <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+        <div  class="col-12 col-sm-12 col-md-12 col-lg-12">
          <nav class="navbar navbar-expand-lg navbar-light">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
